--- a/app/src/main/res/layout/sawm_fasting.xml
+++ b/app/src/main/res/layout/sawm_fasting.xml
@@ -45,15 +45,12 @@
                     android:gravity="center"
                     android:padding="10dp"
                     android:text="The fourth pillar of Islam is sawm, also known as fasting. This is
-when Muslims fast during the month of Ramadhan every year.\n\n
-Fasting means not eating or drinking from dawn to sunset. Not
+when Muslims fast during the month of Ramadhan every year.\n\nFasting means not eating or drinking from dawn to sunset. Not
 only do Muslims avoid food, they are also expected to stay away
-from using bad language, lying and other bad things.\n\n
-Following Isha (the night prayer), Muslims pray Tarawih.
+from using bad language, lying and other bad things.\n\nFollowing Isha (the night prayer), Muslims pray Tarawih.
 This is an additional prayer that is performed during Ramadhan
 and is a prayer that the Prophet Muhammad (PBUH)
-made during the holy month.\n\n
-Muslims eat a meal before dawn called Sahoor and then a
+made during the holy month.\n\nMuslims eat a meal before dawn called Sahoor and then a
 meal after sunset to break the fast. This is called Iftar and often,
 Muslims enjoy this meal with family or friends. Arrangements
 can also be made in the mosque so locals can gather
@@ -86,8 +83,7 @@ Muslims of the poor who go
 days without food or drink and make them feel empathy
 for those who are unable to eat and drink as they please. It is also intended to stop
 Muslims from doing or saying bad things as Ramadhan is a special month full of
-great blessings.\n\n
-To mark the end of
+great blessings.\n\nTo mark the end of
 Ramadhan, Muslims celebrate Eid al
 -
 Fitr. This is a day that starts
