--- a/app/src/main/res/layout/zakat_layout.xml
+++ b/app/src/main/res/layout/zakat_layout.xml
@@ -46,8 +46,7 @@
                     android:padding="10dp"
                     android:text="An important act of worship and pillar of Islam is Zakat. It is
 required for all Muslims who have more money than they need
-to give a payment to the poor and needy.\n\n
-The minimum amount of money that Muslims should give in
+to give a payment to the poor and needy.\n\nThe minimum amount of money that Muslims should give in
 Zakat is 2.5 percent of their total savings and wealth. This
 payment must be made once a year.
 "
