--- a/app/src/main/res/layout/activity_angels.xml
+++ b/app/src/main/res/layout/activity_angels.xml
@@ -46,23 +46,22 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/tab_bar_view">
 
-        <ImageView
-            android:id="@+id/img_thinking"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/basic_beliefs_bg" />
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/img_thinking">
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="10dp"
                 android:orientation="vertical">
+                <ImageView
+                    android:id="@+id/img_thinking"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/basic_beliefs_bg" />
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="45dp"
@@ -76,6 +75,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_margin="10dp"
+
                     android:background="@drawable/round_corner_grey"
                     android:orientation="vertical">
 
@@ -97,19 +98,17 @@
                         android:padding="10dp"
                         android:text="Allah created everything from the sky to the sea and
 everything in between. The birds that fly above us and
-the cats that roam the streets – Allah made them.\n\n
-He also made creatures called Angels. We cannot see
+the cats that roam the streets – Allah made them.\n\nHe also made creatures called Angels. We cannot see
 the Angels, but Allah talks about them in the Quran.
 They are made from light and they are Allah’s special
-servants because they do everything they are told.\n\n
-Angels have many different jobs, but they always obey
+servants because they do everything they are told.\n\nAngels have many different jobs, but they always obey
 Allah’s commands. There are two angels named Raqib
 and Atid that record each human’s deeds. They write
 down all the good and bad actions that each person
 has carried out during their life. Together they are
 known as ‘Kiraman Katibin’ (Honourable Recorders).
 "
-                        android:textStyle="bold" />
+                        android:textColor="@color/colorBlack" />
 
                     <TextView
                         android:layout_width="match_parent"
@@ -299,14 +298,14 @@ declare the Day of Judgement."
                             android:layout_height="match_parent"
                             android:background="@null"
                             android:gravity="center_vertical"
-                            android:text="Messengers"
+                            android:text="Messengers  "
                             android:textColor="@color/colorAppRed"
                             android:textSize="18sp"
                             android:textStyle="bold" />
 
                         <ImageView
-                            android:layout_width="60dp"
-                            android:layout_height="50dp"
+                            android:layout_width="50dp"
+                            android:layout_height="match_parent"
                             android:src="@drawable/next_button" />
                     </LinearLayout>
 
