--- a/app/src/main/res/layout/activity_azan.xml
+++ b/app/src/main/res/layout/activity_azan.xml
@@ -53,6 +53,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="5dp"
+            android:textColor="@color/colorBlack"
             android:text="Before each prayer, the call to prayer is made. This is known as the
 Adhaan and the person who recites the adhaan is called a Muezzin. The
 first Muezzin was Bilal ibn Rabah–one of the companions of the Prophet Muhammad (PBUH)." />
