--- a/app/src/main/res/layout/activity_basic_beliefs_allah.xml
+++ b/app/src/main/res/layout/activity_basic_beliefs_allah.xml
@@ -48,23 +48,20 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/tab_bar_view">
 
-        <ImageView
-            android:id="@+id/img_thinking"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/basic_beliefs_bg" />
-
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/img_thinking">
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="10dp"
                 android:orientation="vertical">
+                <ImageView
+                    android:id="@+id/img_thinking"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/basic_beliefs_bg" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -79,6 +76,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_margin="10dp"
                     android:background="@drawable/round_corner_grey"
                     android:orientation="vertical">
 
@@ -182,7 +180,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_below="@+id/question_title2"
-                                android:text="He is everywhere. People cannot see Him \n but He can see everything"
+                                android:text="He is everywhere. People cannot see Him \nbut He can see everything"
                                 android:textColor="@color/colorBlue"
                                 android:visibility="gone" />
 
@@ -212,7 +210,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_below="@+id/question_title3"
-                                android:text="No, Allah is not like anything that He created.\n He has no body, face or hands, he is unique and there is nothing like Him."
+                                android:text="No, Allah is not like anything that He created.\nHe has no body, face or hands, he is unique and there is nothing like Him."
                                 android:textColor="@color/colorBlue"
                                 android:visibility="gone" />
 
