--- a/app/src/main/res/layout/activity_five_prayers.xml
+++ b/app/src/main/res/layout/activity_five_prayers.xml
@@ -47,29 +47,29 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/tab_bar_view">
 
-        <ImageView
-            android:id="@+id/img_thinking"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/salah_bg" />
+
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/img_thinking">
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="10dp"
                 android:orientation="vertical">
+                <ImageView
+                    android:id="@+id/img_thinking"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/salah_bg" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="45dp"
                     android:gravity="center"
                     android:padding="10dp"
+                    android:layout_marginTop="10dp"
                     android:text="Salat"
                     android:textColor="@color/colorPurple"
                     android:textSize="18sp"
@@ -78,6 +78,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_margin="10dp"
                     android:background="@drawable/round_corner_grey"
                     android:orientation="vertical">
 
