--- a/app/src/main/res/layout/activity_judgement_and_life.xml
+++ b/app/src/main/res/layout/activity_judgement_and_life.xml
@@ -46,23 +46,21 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/tab_bar_view">
 
-        <ImageView
-            android:id="@+id/img_thinking"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/basic_beliefs_bg" />
-
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/img_thinking">
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="10dp"
                 android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/img_thinking"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/basic_beliefs_bg" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -77,17 +75,19 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_margin="10dp"
                     android:background="@drawable/round_corner_grey"
                     android:orientation="vertical">
 
-                    <TextView
+
+                <TextView
                         android:layout_width="match_parent"
-                        android:layout_height="70dp"
+                        android:layout_height="wrap_content"
                         android:background="@drawable/round_corner_blue"
                         android:gravity="center_vertical"
                         android:padding="10dp"
                         android:text="Day Of Judgement
-\n&amp; Life After Death"
+&amp; Life After Death"
                         android:textColor="@color/colorWhite"
                         android:textSize="18sp"
                         android:textStyle="bold" />
@@ -100,7 +100,7 @@
                         android:paddingTop="10dp"
                         android:text="“To God we belong and to Him we shall return”"
                         android:textColor="@color/colorPurple"
-                        android:textStyle="bold" />
+                        />
 
                     <TextView
                         android:layout_width="match_parent"
@@ -134,7 +134,7 @@ bad deeds will enter Jahannam, or Hell.
 must try to follow Allah’s guidance so that we can go to
 Jannah.
 "
-                        android:textStyle="bold" />
+                        android:textColor="@color/colorBlack" />
 
                     <TextView
                         android:layout_width="match_parent"
@@ -352,14 +352,15 @@ as the house of Allah."
                             android:layout_height="match_parent"
                             android:background="@null"
                             android:gravity="center_vertical"
-                            android:text="Allah"
+                            android:text="Allah "
                             android:textColor="@color/colorAppRed"
                             android:textSize="18sp"
                             android:textStyle="bold" />
 
                         <ImageView
-                            android:layout_width="60dp"
-                            android:layout_height="50dp"
+                            android:layout_width="50dp"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center"
                             android:src="@drawable/next_button" />
                     </LinearLayout>
 
