--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ativities.SplashActivity">
+    tools:context=".ativities.StartSignUp.SplashActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
