--- a/app/src/main/res/layout/prophet_stories.xml
+++ b/app/src/main/res/layout/prophet_stories.xml
@@ -83,48 +83,36 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:padding="10dp"
-                                android:text="
-A long time ago, Allah made the universe. He made everything from the skies to the seas and the
-moon and the stars. He also created angels from light, and they obeyed all His commands.\n\n
-Allah then decided to make a man. The first man Allah created was called Adam (AS).\n\n
-Allah gave Adam the ability to see, hear, smell and taste. He gave him knowledge and wisdom to
-know what was right and what was wrong.\n\n
-As the first man, Adam (AS)
+                                android:text="A long time ago, Allah made the universe. He made everything from the skies to the seas and the
+moon and the stars. He also created angels from light, and they obeyed all His commands.\n\nAllah
+then decided to make a man. The first man Allah created was called Adam (AS).\n\nAllah
+gave Adam the ability to see, hear, smell and taste. He gave him knowledge and wisdom to
+know what was right and what was wrong.\n\nAs the first man, Adam (AS)
 is
 the
 father of all the humans
-that have lived and are living today.\n\n
-Allah made Adam (AS) a prophet and let him live in a beautiful place called Jannah (paradise). Jannah
-was peaceful and had everything that Adam (AS) wanted.\n\n
-Soon after, Hawwa (Eve) was create
+that have lived and are living today.\n\nAllah made Adam (AS) a prophet and let him live in a beautiful place called Jannah (paradise). Jannah
+was peaceful and had everything that Adam (AS) wanted.\n\nSoon after, Hawwa (Eve) was create
 d
 –
 the first woman and mother of humankind. She became the
-wife of Adam (AS) and they both lived happily in Jannah.\n\n
-Adam (AS) and Hawwa were able to enjoy their beautiful surroundings, eat amazing food and live in
-harmony.\n\n
-However, there was one thing t
-hat Allah said they must not do. They were told that they must not
+wife of Adam (AS) and they both lived happily in Jannah.\n\nAdam (AS)
+and Hawwa were able to enjoy their beautiful surroundings, eat amazing food and live in
+harmony.\n\nHowever, there was one thing
+that Allah said they must not do. They were told that they must not
 eat fruit from a certain
 tree
-. Both Adam (AS) and Hawwa listened and stayed away from the tree.\n\n
-This was until Shaytan (the Devil)
+. Both Adam (AS) and Hawwa listened and stayed away from the tree.\n\nThis was until Shaytan (the Devil)
 told them to do something very bad. One day, Shaytan whispered
 to Adam (AS) and Hawwa. He told them that the fruit from the tree was delicious and
 it would make
-them live forever.\n\n
-“Go on... try it!”
-he said.\n\n
-Both Adam (AS) and Hawwa decided to listen to Shaytan and taste
-the fruit.\n\n
-They had listened to Shaytan and disobeyed Allah. This soon made them realise that they had done
-something wrong.\n\n
-The two of them felt guilty and sad. They told Allah that they were sorry for trying the fruit and going
-against his orders.\n\n
-Allah forgave both Adam (AS) and Hawwa but told
+them live forever.\n\n“Go on... try it!”
+he said.\n\nBoth Adam (AS) and Hawwa decided to listen to Shaytan and taste
+the fruit.\n\nThey had listened to Shaytan and disobeyed Allah. This soon made them realise that they had done
+something wrong.\n\nThe two of them felt guilty and sad. They told Allah that they were sorry for trying the fruit and going
+against his orders.\n\nAllah forgave both Adam (AS) and Hawwa but told
 them that they could no longer stay in Jannah.
-They now had to leave and be sent to live on earth.\n\n
-They lived on earth for a long time and Allah gave them many children.
+They now had to leave and be sent to live on earth.\n\nThey lived on earth for a long time and Allah gave them many children.
 He also sent down a message
 to Adam (AS). Allah told Adam (AS) that messengers will
 be coming to earth to guide the people and
@@ -169,20 +157,20 @@ those that follow the right path will go to Jannah\n"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:padding="10dp"
-                                android:text="Many years ago, there lived a young boy called Ibrahim (AS). He was a very clever and curious child.\n\n
-Ibrahim (AS) had a father who used to make idols. These idols were sold at the market and people would buy and worship them. Most people at the time worshipped idols as they had forgotten Allah’s message.\n\n
-Sometimes, when his father made the idols, Ibrahim (AS) would play with them. But he often wondered why people prayed to these objects. He did not understand why the people around him worshipped statues that had been made by humans themselves.\n\n
-“Father, I don’t think we should worship these idols”, Ibrahim (AS) once said.\n\n
-His father was very angry with Ibrahim (AS) and told him to never say such a thing again. However,Ibrahim (AS) still felt the people were doing something wrong.\n\n
-One day, he decided to show the people that they were wrong for worshipping idols.Ibrahim (AS)went to the temple and broke all the idols, leaving the biggest one.\n\n
-Soon the community saw that somebody had destroyed the idols. It did not take long for them to realise that it was Ibrahim (AS). The people asked Ibrahim (AS) if it he was responsible, and he replied:\n\n
-“Ask the big idol, he should know who did it”\n\n
-Ibrahim (AS) knew that the idols could not speak but he tried to show the community that they were wrong for worshipping these objects.The prophet continued to try and make the people realise that the idols are just stone and they should pray to Allah instead.But no one wanted to listen.\n\n
-The people became more and more angry with Ibrahim (AS). They wanted to kill him.\n\n
-A fire was made, and they were ready to throw Ibrahim (AS) inside it. Despite the angry people and the burning flames, Ibrahim (AS) stayed calm. He knew that Allah would save him. \n\n
-Ibrahim (AS) was thrown into the fire and the people rejoiced.
-Once the fire died out, the people saw something remarkable. Ibrahim (AS) was alive and he was completely unharmed. Allah had saved him.\n\n
-The community had just witnessed a miracle, and this caused many of them to start believing inAllah.\n\n"
+                                android:text="Many years ago, there lived a young boy called Ibrahim (AS). He was a very clever and curious child.
+                                \n\nIbrahim (AS) had a father who used to make idols. These idols were sold at the market and people would buy and worship them. Most people at the time worshipped idols as they had forgotten Allah’s message.
+                                \n\nSometimes, when his father made the idols, Ibrahim (AS) would play with them. But he often wondered why people prayed to these objects. He did not understand why the people around him worshipped statues that had been made by humans themselves.
+                                \n\n“Father, I don’t think we should worship these idols”, Ibrahim (AS) once said.
+                                \n\nHis father was very angry with Ibrahim (AS) and told him to never say such a thing again. However,Ibrahim (AS) still felt the people were doing something wrong.
+                                \n\nOne day, he decided to show the people that they were wrong for worshipping idols.Ibrahim (AS)went to the temple and broke all the idols, leaving the biggest one.
+                                \n\nSoon the community saw that somebody had destroyed the idols. It did not take long for them to realise that it was Ibrahim (AS). The people asked Ibrahim (AS) if it he was responsible, and he replied:
+                                \n\n“Ask the big idol, he should know who did it”
+                                \n\nIbrahim (AS) knew that the idols could not speak but he tried to show the community that they were wrong for worshipping these objects.The prophet continued to try and make the people realise that the idols are just stone and they should pray to Allah instead.But no one wanted to listen.
+                                \n\nThe people became more and more angry with Ibrahim (AS). They wanted to kill him.
+                                \n\nA fire was made, and they were ready to throw Ibrahim (AS) inside it. Despite the angry people and the burning flames, Ibrahim (AS) stayed calm. He knew that Allah would save him.
+                                \n\nIbrahim (AS) was thrown into the fire and the people rejoiced.
+                                Once the fire died out, the people saw something remarkable. Ibrahim (AS) was alive and he was completely unharmed. Allah had saved him.
+                                \n\nThe community had just witnessed a miracle, and this caused many of them to start believing inAllah.\n\n"
                                 android:textColor="@color/colorBlack" />
 
                         </LinearLayout>
@@ -221,14 +209,14 @@ The community had just witnessed a miracle, and this caused many of them to star
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:padding="10dp"
-                                android:text="There once lived a pious man called Nuh (AS). He was a good and patient man and Allah chose him to be a prophet.\n\n
-Allah wanted Nuh (AS) to guide the people of his community to the right path. In those days, many of the people did bad things like lying, cheating and worshipping idols. Nuh (AS) told the people that they should pray to Allah and do good deeds, but they did not want to listen.\n\n
-Only some of the poor and sick people believed Nuh (AS), while the rich people continued to do bad things. They did not believe him and instead, they laugh edat the prophet and tried to harm him.\n\n
-Then, Allah decided that these bad people should be punished. He told Nuh (AS) that he would be sending a very big flood so he should build an arc.\n\n
-Together with some good people, Nuh (AS) built an arc near his home.The arc was huge. When it was ready, the prophet gathered all the good people, along with food to store.Allah also told Nuh (AS) to take two of each living animal, one male and one female. One by one, all the animals entered the arc.There was every animal one could think of. Tigers, zebras, elephants, giraffes and they all went into the arc in pairs. Some of the animals could fly and others could run but Nuh (AS) made sure to bring them all.\n\n
-The arc had become a safe space for both the people and the animals as they prepared for the flood.\n\n
-One day, the skies grew dark. They went from blue to grey and it started to rain. The rain became heavier and heavier, until there was water everywhere. No land could be seen because it had become covered in water. There were no trees, no mountains or people.\n\n
-Only Nuh(AS), the good people and the animals were safe in the arc. Allah soon stopped the rain and the earth swallowed the water. All that was left was the arc with the people and the animals.They thanked Allah for saving them and they lived out their lives believing in Allah and following the right path.\n\n
+                                android:text="There once lived a pious man called Nuh (AS). He was a good and patient man and Allah chose him to be a prophet.
+                                \n\nAllah wanted Nuh (AS) to guide the people of his community to the right path. In those days, many of the people did bad things like lying, cheating and worshipping idols. Nuh (AS) told the people that they should pray to Allah and do good deeds, but they did not want to listen.
+                                \n\nOnly some of the poor and sick people believed Nuh (AS), while the rich people continued to do bad things. They did not believe him and instead, they laugh edat the prophet and tried to harm him.
+                                \n\nThen, Allah decided that these bad people should be punished. He told Nuh (AS) that he would be sending a very big flood so he should build an arc.
+                                \n\nTogether with some good people, Nuh (AS) built an arc near his home.The arc was huge. When it was ready, the prophet gathered all the good people, along with food to store.Allah also told Nuh (AS) to take two of each living animal, one male and one female. One by one, all the animals entered the arc.There was every animal one could think of. Tigers, zebras, elephants, giraffes and they all went into the arc in pairs. Some of the animals could fly and others could run but Nuh (AS) made sure to bring them all.
+                                \n\nThe arc had become a safe space for both the people and the animals as they prepared for the flood.
+                                \n\nOne day, the skies grew dark. They went from blue to grey and it started to rain. The rain became heavier and heavier, until there was water everywhere. No land could be seen because it had become covered in water. There were no trees, no mountains or people.
+                                \n\nOnly Nuh(AS), the good people and the animals were safe in the arc. Allah soon stopped the rain and the earth swallowed the water. All that was left was the arc with the people and the animals.They thanked Allah for saving them and they lived out their lives believing in Allah and following the right path.\n\n
 "
                                 android:textColor="@color/colorBlack" />
 
@@ -268,24 +256,24 @@ Only Nuh(AS), the good people and the animals were safe in the arc. Allah soon s
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:padding="10dp"
-                                android:text="Many, many years ago, Egypt was ruled by a wicked Pharaoh.\n\n
-In Egypt, There lived a tribe of people from Israel, known as the Children of Israel. The Pharaoh treated these people very badly and he made many of them his slaves.\n\n
-One night, the Pharaoh had a dream that a boy would be born amongst the Children of Israel who would grow up and destroy the Pharaoh.\n\n
-The dream made the Pharaoh very angry. He ordered his men to kill every new-born boy from the tribe. The Children of Israel were helpless as their sons were snatched from them.\n\n
-During this difficult time, one woman had recently given birth to a baby boy. As the mother heard the soldiers approach her home, she ran with her baby.She put the baby into a basket and laid it into the river Nile.\n\n
-It hurt the mother to leave the baby, but she could not let the Pharaoh’s men take him.\n\n
-With the help of Allah, the basket floated in the river. The waves carried the basket away until it reached the palace of the Pharaoh.\n\n
-The basket was brought to the wife of the Pharaoh, Asiya. Asiya was a kind and gentle woman. She was amazed by the beautiful baby.\n\n
-The Pharaoh wanted to kill the boy but Asiya refused to let this happen. She cried and begged him to let the baby live. Eventually, the Pharaoh agreed, and the baby was kept in the palace. \n\n
-Asiya brought up the child as her own and he was named Musa (AS).\n\n
-Musa (AS)was looked after very well but he would not take milk from anyone. Many women tried to feed the baby, but he refused. This was until Musa’s (AS) real mother was brought to the palace.\n\n
-She was able to stop Musa (AS) from crying and she fed him. Allah had reunited the mother and son.\n\n
-Musa (AS) grew up in the palace. He had a good upbringing and received the best education.\n\n
-However, as he became older and wiser, he realised that the Pharaoh treated the people of Egypt badly. He left the Pharaoh’s land.\n\n
-He travelled to Madyan where he met Prophet Shuaib (AS) and married his daughter. Musa (AS)lived a happy life with his family.\n\n
-After some years, Musa (AS)travelled back to Egypt with his family on a cold winter night. However, it became dark and Musa (AS)and his wife got lost.\n\n
-He then saw a fire in the distance. Musa (AS) told his wife to wait back as he walked towards the fire.\n\n
-As Musa (AS) got closer to the fire, he heard Allah’s voice. Allah spoke to Musa (AS) and told him tha the was his messenger. He asked the prophet to spread the word of Allah and show the people ofEgypt the right path.\n\n
+                                android:text="Many, many years ago, Egypt was ruled by a wicked Pharaoh.
+                                \n\nIn Egypt, There lived a tribe of people from Israel, known as the Children of Israel. The Pharaoh treated these people very badly and he made many of them his slaves.
+                                \n\nOne night, the Pharaoh had a dream that a boy would be born amongst the Children of Israel who would grow up and destroy the Pharaoh.
+                                \n\nThe dream made the Pharaoh very angry. He ordered his men to kill every new-born boy from the tribe. The Children of Israel were helpless as their sons were snatched from them.
+                                \n\nDuring this difficult time, one woman had recently given birth to a baby boy. As the mother heard the soldiers approach her home, she ran with her baby.She put the baby into a basket and laid it into the river Nile.
+                                \n\nIt hurt the mother to leave the baby, but she could not let the Pharaoh’s men take him.
+                                \n\nWith the help of Allah, the basket floated in the river. The waves carried the basket away until it reached the palace of the Pharaoh.
+                                \n\nThe basket was brought to the wife of the Pharaoh, Asiya. Asiya was a kind and gentle woman. She was amazed by the beautiful baby.
+                                \n\nThe Pharaoh wanted to kill the boy but Asiya refused to let this happen. She cried and begged him to let the baby live. Eventually, the Pharaoh agreed, and the baby was kept in the palace.
+                                \n\nAsiya brought up the child as her own and he was named Musa (AS).
+                                \n\nMusa (AS)was looked after very well but he would not take milk from anyone. Many women tried to feed the baby, but he refused. This was until Musa’s (AS) real mother was brought to the palace.
+                                \n\nShe was able to stop Musa (AS) from crying and she fed him. Allah had reunited the mother and son.
+                                \n\nMusa (AS) grew up in the palace. He had a good upbringing and received the best education.
+                                \n\nHowever, as he became older and wiser, he realised that the Pharaoh treated the people of Egypt badly. He left the Pharaoh’s land.
+                                \n\nHe travelled to Madyan where he met Prophet Shuaib (AS) and married his daughter. Musa (AS)lived a happy life with his family.
+                                \n\nAfter some years, Musa (AS)travelled back to Egypt with his family on a cold winter night. However, it became dark and Musa (AS)and his wife got lost.
+                                \n\nHe then saw a fire in the distance. Musa (AS) told his wife to wait back as he walked towards the fire.
+                                \n\nAs Musa (AS) got closer to the fire, he heard Allah’s voice. Allah spoke to Musa (AS) and told him tha the was his messenger. He asked the prophet to spread the word of Allah and show the people ofEgypt the right path.\n\n
 "
                                 android:textColor="@color/colorBlack" />
 
