--- a/app/src/main/res/layout/shahadat_layout.xml
+++ b/app/src/main/res/layout/shahadat_layout.xml
@@ -45,9 +45,8 @@
                     android:text="The first pillar of Islam is Shahadah. Shahadah is to believe
 that there is no God except Allah and that Muhammad
 (PBUH) is his messenger. A person becomes a Muslim by
-reciting and believing in this statement:
-T"
-                    android:textStyle="bold" />
+reciting and believing in this statement:"
+                    android:textColor="@color/colorBlack" />
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -63,10 +62,21 @@ T"
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:padding="10dp"
+                    android:text="La
+ilaha ill Allah Muhammadur
+-
+Rasul Allah"
+                    android:textColor="@color/colorBlack"
+                    />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:padding="10dp"
                     android:text="There is no god but God, and
 Muhammad is the messenger of Allah"
                     android:textColor="@color/colorPurple"
-                    android:textStyle="bold" />
+                     />
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -74,7 +84,7 @@ Muhammad is the messenger of Allah"
                     android:padding="10dp"
                     android:text="This is also known as Kalima Tayyibah (Word of Purity).
 It is the first of the six well-known kalimas."
-                    android:textStyle="bold" />
+                    android:textColor="@color/colorBlack" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
